--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
 remote_theme: pmarsceill/just-the-docs
+
+# Enable or disable the site search
+search_enabled: true
+
+aux_links:
+    "Contribute to the list on github":
+      - "//github.com/automato-build/ffffffffaq"
+      
+# Google Analytics Tracking (optional)
+# e.g, UA-1234567-89
+ga_tracking: UA-96156394-2
