--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+title: FFFFFFFFAQ
+description: Near future frequently asked questions
+
 remote_theme: pmarsceill/just-the-docs
 
 # Enable or disable the site search
